--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@ a el
 a espaldas
 a esta hora
 a esta parte
-a
 a la derecha
 a los lados
 a los pies de
@@ -61,18 +60,14 @@ a mí
 a nosotros
 a poco no
 a sus pies
-a través de
 a veces
 a veces
 a vosotros
-a
-a
 ababol
 abacería
 abacero
 abad
 abadesa
-abadía
 abajo
 abalanzar
 aballestar
@@ -261,7 +256,6 @@ actuar
 acuarela
 acuarelas
 acuario
-acuario
 acuático
 acuchillar
 acudir
@@ -364,8 +358,6 @@ afligido
 afligir
 aflojar
 afrentarse de alguien
-Africa
-africano
 afuera
 agachado
 agachar
@@ -1379,7 +1371,6 @@ batea
 batidora
 batimiento
 baúl
-baúl
 bautismo
 bautisterio
 bautizar
@@ -1388,13 +1379,9 @@ bebe
 bebé
 bebedor
 beber
-beber
-beber agua
-beber caldo sin cuchara
 bebés
 bebible
 bebida alcohólica
-bebida embriagante
 bebida
 bejuco
 Belarus
@@ -1403,8 +1390,6 @@ Belgica
 Belice
 beliceño
 belleza
-bello
-bello
 bello
 bellota
 Belmopan
@@ -1441,18 +1426,14 @@ bicicleta
 bienaventuranza
 bienechor
 bienvenido
-bienvenidos
 bifurcado
 bifurcar
 bigote
-Bilbao
 bilingüe
 billete
 binocular
 biología
 biologo
-Birmania
-birmano
 bisabuela
 bisabuela
 bisabuelo
@@ -3068,15 +3049,13 @@ de allá para acá 
 de ambos lados
 de buen oído
 de buen pie
-de buenaano
+de buena mano
 de casa en casa 
 de día
 de dos en dos
-de esaanera
-de España
-de laismaanera
-de los
-deadrugada
+de esa manera
+de la misma manera
+de madrugada
 de México
 de ningúnodo es posible 
 de noche
@@ -6832,7 +6811,7 @@ palabras vanas
 palacete
 palacio de gobierno
 palacio
-palaciounicipal
+palacio municipal
 palacio real
 paladar
 paladear
@@ -9315,17 +9294,12 @@ viento seco
 vientre de embarazo
 vientre
 viernes
-Vietnam
-vietnamita
 viga
 vigilancia
 vigilia
 vigor
-vikingo
 vil
 villa
-Villa Guerrero
-Villahermosa
 villano
 vinagre
 vinatería
@@ -9361,8 +9335,6 @@ vivir en castidad
 vivir pobre
 vivir
 vivir
-vivir
-vivo
 vívora de cascabel
 vocabulario
 vocal
@@ -9390,35 +9362,12 @@ vuelto
 vuelve otra vez
 vuestro
 vulva
-Xalco
 xenofobia
-xenofóbico
 xerófila
-xi
-Xico
-Xicotepec
-xílex
-xilonene
-Xipe Totec
-Xitle
-Xiuhtecuhtli
-Xoaltecuhtli
-Xochiatipan
-Xochicalco
-xochimilca
-Xochimilco
-Xochipilli
-Xochiquetzal
-Xochistlahuaca
-xoconoxtle
 xoloezcuincle perro azteca
 Xolotlán
 Xonacatlán
-y si
 y
-y
-y
-ya
 ya es de noche
 ya es tarde
 ya no
@@ -9433,32 +9382,15 @@ yerno
 yeso
 yi
 yo
-yo a ustedes
-yo soyexicano
-yo vivo en México
 yodo
 yogurt
 yuca
-Yucatán
-yucateco
-Yugoslavia
-Yugoslavia
-yugoslavo
 yunque
 yunta
 yutano
 yute
 zacahuil
 Zacapa
-zacatecano 
-Zacatecas
-Zacatecoluca
-Zacatenco
-Zacatepec
-Zacatlán
-Zacazonapan
-Zacualpan
-Zacualtipan
 zafado
 zafados
 zafarse
@@ -9489,22 +9421,15 @@ zapoteco
 zapotero amarillo
 zapotero blanco
 zapotero negro
-Zapotitlán
 zarza
 zarzamora
 zarzamora
 Zempoala
 zi
-Zihuatanejo
-Zimapan
-Zinacantán
-Zinacantepec
-Zitlala
 zodoacal
 zonaría
 zoológico
 zopilote
-Zoquiapan
 zorra
 zorrillo
 zorro
@@ -9527,7 +9452,6 @@ quin-
 cuitlapan 1
 imani
 iyepan
-﻿a
 yacanatli
 tlamac
 ihxipan
@@ -9536,18 +9460,14 @@ nech-
 tech-
 anomo
 icxitlantzinco
--tica
 quimaca
 quemanian
 amech-
-cana
-canapa
 amapotl
 xiuhcaloyan
 xiuhcani
 teoyotica tepachoani
 cihuateoyotica tepachoani
-teoyotica tepacholiztli
 tlani 1
 cuitlaxeloa 1
 tepoztlahuitoloa
@@ -9735,7 +9655,6 @@ axcantica
 Ixehuayilia
 tetlapalli
 cuauhtlapaloni
-ahuacoyan
 michacaxitl
 aqui 1
 tepozmacuauhuia
@@ -9839,8 +9758,6 @@ chichinatzalli
 chichinatza
 molonia
 ixmalia
-Africa
-africatl
 quihuac
 pixtoc
 pixtoa
@@ -9983,7 +9900,7 @@ namiqui 1
 icuepca mochiuhtica
 imoztlatica
 itlamia
--tlan
+#¿NOMBRE?
 nencan
 achitonca
 amictlampa
@@ -10853,7 +10770,6 @@ necaliliztli
 chicahuac huitzoctli
 tepozpatzcaloni
 neloayotl
-cuauhpetlacaxitl
 cuauhcaxitl
 tecuaquiyotl
 tecuatequiloyan
@@ -10862,14 +10778,10 @@ tecuaquiliztli
 conetzintli
 conenetl
 topocatl
-oni
-i 2
-atli
-iltequi
+i
 conene
 itli
 comilli
-tlailli
 tlapiazoiliztli
 cuamecatl
 Belarruxia
@@ -10878,8 +10790,6 @@ Belxica
 Hueycopan
 hueycopatl
 cualnezcayotl
-chichipaltic
-quetzaltic
 cualtzin
 ahuatomatl
 Hueymolpan
@@ -10916,18 +10826,14 @@ omemalacatl
 tlalnocpilhualiztli
 teictliani
 ximopanolti
-Ximopanolti timochtin
 maxaltic
 maxa
 camazontli
-Bilbaotl
 ometlahto
 amatomin
 huehca machiolli
 neminiliztlamatiliztli
 neminiliztlamatini
-Burmia
-burmiatl
 chichilamatl
 achcihtli
 chichicolli
@@ -11677,9 +11583,9 @@ chichimecah
 xiquipilihuiztli
 chictli
 chitic
--tepiton
+#¿NOMBRE?
 chiquitl
--tontli
+#¿NOMBRE?
 Chicomecoatl
 Chicomecoac
 chicotli
@@ -12548,9 +12454,7 @@ cehcencalpan
 tonaltica
 omeixpan
 icon
-ihuicpa Hispania 
 zan nohui
-den
 oc yohuatzinco
 ihuicpa Mexico 
 zan ahuel
@@ -13353,7 +13257,7 @@ piltian
 yohuatzinco
 huatzinco
 atempan
--nahuac
+#¿NOMBRE?
 nahuatlatoltica
 tlahcoyan
 tzala
@@ -13393,7 +13297,7 @@ tletlalilli
 xicocuitlaltia
 cococihui
 hueyamoxtli
--icpac
+#¿NOMBRE?
 imicpac
 cuelquitl
 ahuatl
@@ -13558,7 +13462,7 @@ cuauhtzalan
 atitlan
 intzalan
 nimayan
--titlan
+#¿NOMBRE?
 nictemactli
 temactli
 xipepanoa
@@ -14495,6 +14399,7 @@ tlacuilolli
 tenchimalli
 camaxipolli
 hoquiliztli
+chantli
 cuauhtlapalli
 ixhuatl 1
 amatlapalli
@@ -14824,7 +14729,7 @@ itacatl
 Itlalia
 itlaliatecatl
 itlaliatl
--tzin
+#¿NOMBRE?
 Itzcoatl
 Itzmiquilpan
 ichcatecatl
@@ -14967,7 +14872,7 @@ tlaxcatl
 nechicalli
 nechicoa 2
 chico
--tan
+#¿NOMBRE?
 ceccan
 Tezcatlipoctli
 itechtlahtololiztli
@@ -15356,15 +15261,15 @@ iyotia
 immanon
 axcampa
 zan niman
--huacan
--lan
+#¿NOMBRE?
+#¿NOMBRE?
 yeccan 2
 oztotlan
--can
+#¿NOMBRE?
 izayoc
--yocan
+#¿NOMBRE?
 yeyantli
--co
+#¿NOMBRE?
 ahuineminiliztli
 ahuilnemiqui
 tlenextli
@@ -16570,7 +16475,7 @@ pepenani
 ayoxoxouhcatl
 achelli
 pachtic
--tzintli
+#¿NOMBRE?
 atzapotl
 atzapocahuitl
 tecomatl
@@ -16612,7 +16517,7 @@ itzcuintin
 chichimeh
 itzcuinyotl
 atlatlamachtilli
--ecatl
+#¿NOMBRE?
 tecatl
 tlaixiuhliztli
 Incatlan
@@ -17836,7 +17741,7 @@ itechpa
 apan 2
 intechpa
 ahuilizapan
--pan
+#¿NOMBRE?
 ontetocaitl
 tecahua
 cihuamachtli
@@ -18723,6 +18628,7 @@ itta
 cecemitta
 cochitia
 tlachia
+ihta
 Totonicapan
 totonicatecatl
 cuauhchinamitl
@@ -18788,17 +18694,12 @@ ehecahuacqui
 cihuatetl 2
 huitetl
 macuililhuitl
-Vietnamia
-vietnamitecatl
 huapalitl
 ixtozolixtli
 tozoliztli
 pactinemiliztli
-viquintecatl
 atlazotli
 altepemaitl
-Tecuanloyan
-Cualnezcaltepec
 tlahpalihuic
 xococtli
 ocnamacoyan
@@ -18833,9 +18734,7 @@ nehuemini
 pixtinemi
 anonaci
 yolia
-chantia
-chanti
-yolli 1
+nemi
 tecuatlacoatl
 tlahtolloliztli
 celticaquiztli
@@ -18863,35 +18762,12 @@ tentzouhqui
 ohpana
 amohuan
 nenetl 2
-Chalco
 chontalmamatiliztli
-chontalmamatli
 ximitl
-x
-Xico
-Xicotepec
-tecpatl
-xilonenen
-Xipe Totec
-Xictli
-Xiuhtecuhtli
-Xoaltecuhtli
-Xochiaticpan
-Xochicalco
-xochimilcatl
-Xochimilco
-Xochipilli
-Xochiquetzalli
-Xochixtlahuacan
-xoconochtli
 xoloitzcuintli
 Xolotlan
 Xonacatlan
-tla
 ihuan
-huan
-auh
-yeh
 yeh tiayohuac
 yeh teotlac
 aco 2
@@ -18906,32 +18782,15 @@ montli
 tezoquitl
 y
 nehuatl
-namech-
-nehuatl nimexica
-nehuatl nichanti Mexico
 yoyotl 2
 xocoqui
 itzotl
-Yucatan
-yucatecatl
-Yugoslavia
-Servia huan Montenegro
-yugoslavitecatl
 tepoztlatzonaloni
 centlamantiqui
 yutatl
 yuhtli
 zacahuilli
 Zacapan
-zacatecatl
-Zacatecapan
-Zacatecolocan
-Zacatenco
-Zacatepec
-Zacatlan
-Zacaxonacpan
-Tzacualpan
-Tzacualtlilpan
 copinqui
 copinque
 copinia
@@ -18962,22 +18821,15 @@ zapotl
 coztitzapotl
 cochitzapocuahuitl
 tliltzapocuahuitl
-Tzapotitlan
 huetztlapalli
 huatzactli
 huatzacuahuitl
 Cempoallan
 z
-Cihuatlatzinco
-Cimapan
-Tzinacantan
-Tzinacantepec
-Citlallan
 tonallo
 cehuayan
 yolcacuauhtlan
 tzopilotl
-Zoquiapan
 cozatli
 epatl
 oztoatl
