--- a/index.html
+++ b/index.html
@@ -139,7 +139,6 @@ abrir la boca
 abrir la mano
 abrir los ojos
 abrir
-abrir
 abrochado
 abrochar
 abrojo
@@ -860,7 +859,6 @@ apreciado
 apreciar
 aprecio
 aprender
-aprender 
 aprender
 aprendido
 apresiado
@@ -1583,7 +1581,6 @@ bubas
 buceo
 buda
 budismo
-budista
 buenas noches
 buenas tardes
 bueno
@@ -5762,6 +5759,7 @@ limonero
 limosna 
 limosnero 
 limpiar
+limpiar
 limpiar la boca
 linaza
 lince
@@ -6633,6 +6631,7 @@ obra
 obra pública
 obrar
 obrero
+observar
 observatorio astronómico
 obsidiana
 ocación
@@ -7244,7 +7243,7 @@ platano
 plateado
 platería
 platero 
-platicar con alguien
+platicar
 platillos
 plato
 plato pequeño
@@ -7414,7 +7413,6 @@ probable
 probablemente
 probablemente 
 probado
-probar
 probar
 procesador
 proceso
@@ -9537,9 +9535,8 @@ netlaquentiliztli
 abrilli
 camacholoa
 malpatzoa
-ixaya
+ixpoa
 poa
-xapotla 1
 tlatlapilli
 tlapia
 chicalotl
@@ -9763,7 +9760,7 @@ pixtoc
 pixtoa
 acatemetl
 nacazcolotl
-aana 1
+ana
 mapiqui 1
 quitzquia
 xicalchalchihuitl
@@ -10260,7 +10257,6 @@ huelcamatilli
 huelcamati
 huelcamatiliztli
 tzaloa
-zalohua
 tlazalohua
 tlamachtilo
 tlanteyotilli
@@ -10983,7 +10979,6 @@ nanahuatl
 atlancalaquiztli
 budateotl
 budayotl
-budatlacatl
 cualli yohualtin
 cualli teotlactin
 cualli ic
@@ -11194,7 +11189,7 @@ temalacaxitl
 nemetzhuiliztli
 quechxicolli
 tlalcamohtli
-tlatzilinitepoztli
+cilinqui
 tepoztlapilcoyan
 tlatziliniani
 cuicatecomatl
@@ -14282,7 +14277,7 @@ ayi
 colonia 2
 amamalacahoa
 achihuatia
-chotia 1
+choquiltia
 huetzquitia
 tlaixtlalia
 tlaxcalchihua
@@ -15161,7 +15156,8 @@ otoncuahuitl
 limoncuahuitl
 tetlauhtiliztli 1
 tetlauhtiani
-chipahua 1
+chipahua
+pohpoa
 camapopoa
 tetzacayotl 2
 iztamiztli
@@ -16033,6 +16029,7 @@ tlachiuhtli
 altepequipanoliztli
 tequia
 tlatequitini
+tlachia
 tzacualilhuicalli
 iztli
 neyolehualiztli
@@ -16073,7 +16070,7 @@ mana 2
 manquetzalli
 tlamanalli
 teixpatini
-ixtelotli
+ixtelolo
 ixtexotic
 ixcamitic
 ixnextic
@@ -16644,7 +16641,7 @@ tzapalotl
 iztateocuitlatic
 iztateocuitlapitzcalli
 iztateocuitlapixqui
-notza 2
+tenonotza
 tepozcaxpechtli
 caxpechtli
 cacaxtotl
@@ -16763,7 +16760,7 @@ tetlapalnahuilli
 tlapalnahuiltia
 tzatzini
 tetlaniliztli
-tlahtolana
+tlahtlania
 yoyomitl
 tlamaliztli
 tlapatzconi 1
@@ -16815,7 +16812,6 @@ azo
 neltililoztica
 tlaneltililli
 machilia
-yeyecoa 2
 cuatlapoalcalli 1
 huiliztlahtolli
 tlatalhuiani
