--- a/index.html
+++ b/index.html
@@ -2742,7 +2742,6 @@ cuidadoso
 cuidar
 cuitlacoche
 culantrillo
-Culiacán
 cultivar
 cultivo de abejas mieleras
 cultivo de caña
@@ -2782,8 +2781,6 @@ dama
 dama
 damiana
 damita
-danés
-danés
 danza
 danza
 danzante 
@@ -2798,7 +2795,6 @@ dar a entender
 dar buen consejo
 dar consejo
 dar credito
-dar de comer
 dar de gritos
 dar de beber
 dar la cara
@@ -2900,7 +2896,6 @@ demolición
 demolido
 demonio
 demonio
-demonios
 demostración
 demostrar
 dentista
@@ -3255,23 +3250,15 @@ diligencia
 diligente
 diluvio
 dimensión
-Dinamarca
 dinero
 dinosaurio
-dios ciego
-dios del sol
-dios del viento
-dios enemigo
 diosalso
 dios hijo 
 Dios
-Dios
-diosaligno
 dios petrificado
 dios terrible
 dios viejo
 diosa
-dioses de los barrios
 dioses
 diputación
 diputado
@@ -3355,28 +3342,19 @@ doctor
 doctrina
 documento
 doler
-doler el corazón
-doler el cuerpo
-doler el estomago
-doler el pecho
-doler la cabeza
-doler las piernas
-doler los dientes
-doler los intestinos
-doler los oídos
-doler los ojos
-doler los pies
-dolor cardiáco
-dolor de cabeza
+dolor de corazón
+dolor de cuerpo
 dolor de estomago
+dolor de pecho
+dolor de cabeza
+dolor de piernas
+dolor de dientes
 dolor de intestinos
-dolor deuela
 dolor de oídos
 dolor de ojos
-dolor de piernas
 dolor de pies
-dolor del cuerpo
-dolor
+dolor cardiáco
+dolor de muela
 dolor
 dolororal
 doloroso
@@ -3389,18 +3367,11 @@ dominante
 dominar
 dominar
 Dominca
-domingo
-Domingo de pascua
-domingo
-dominicano
-dominico
 dominio
 dominó
 don 
-dona
 donación
 donación sanguínea
-Donato Guerra
 doncella
 doncellas
 doncellas
@@ -3425,9 +3396,7 @@ dormitar
 dormitorio
 dos guerras
 dos 
-dosil cuatrocientos
-dosil
-dosil ochocientos
+dos mil
 dos veces
 dotado
 dotar
@@ -3442,18 +3411,11 @@ drogado
 drogar
 drupa
 dualidad 
-Dublín
 duda
 dudar
 dudosamente
-dueño de lailpa
-dueño
-dueño
 dueño
 dueños
-dueños
-dulce
-dulce
 dulce
 dulzura
 duna
@@ -3471,14 +3433,10 @@ duro de carácter
 duro
 duro
 ebullición
-Ecatepec
 echar
 echar de cabeza
 echar especias a la comida
-echar hojas el árbol
 echar la culpa
-echar la red
-eclipce
 eclipse de luna
 eclipse de sol 
 eclipse
@@ -3486,9 +3444,6 @@ eclipse solar
 ecología
 ecologista
 economista
-Ecuador
-ecuador
-ecuatoriano
 edad de oro
 edad
 edificación
@@ -3496,32 +3451,24 @@ edificar
 edificio
 edificio publico
 educación
-EEUU
 efectivamente
 efectividad
 efectivo
 efélides
-egipcio
-Egipto
 egresado
 eje
 ejecutar
 ejemplificar
 ejemplo de vida
 ejercicio
-Ejutla
 el año anterior
 el cual
-elás
-eles pasado
 el otro
 el primero
 el que ladra
 el que ofrece
 el que se retuerce 
 el que
-El Salvador
-El Vaticano
 el
 el
 elástico
@@ -3536,7 +3483,6 @@ elevador
 elevador
 eliminar
 ellos
-Elota
 elote
 emanar
 embajada
@@ -3567,7 +3513,6 @@ embrujado
 embrujar
 embrujo
 embutido
-Emiratos Árabes Unidos
 emoción
 empalagado
 empalagar
@@ -3850,7 +3795,6 @@ envoltura de papel
 envolver
 envolver
 epazote
-Epazoyucan
 epilepsia
 epístola
 época de sequía
@@ -3862,8 +3806,6 @@ era
 era
 érase una vez
 erecto
-Eritrea
-eritreano
 erizo
 ermita
 ermita
@@ -3956,10 +3898,6 @@ esfuezo
 esfumado
 esgrima
 eslabón
-eslovaco
-Eslovaquia
-Eslovenia
-esloveno
 esmeralda
 esmeralda
 esmeril
@@ -3980,7 +3918,6 @@ espanto
 espantoso
 espantoso
 España
-español
 españolismo
 esparcido
 esparcir
@@ -4050,8 +3987,6 @@ estaciónerroviaria
 estacionamiento
 estadio
 estadio olímpico
-estado de Durango
-Estados Unidos
 estalagmita
 estallar
 estallido
@@ -4082,10 +4017,7 @@ estero
 estetoscopio
 estilo arquitectónico novohispano
 estilo
-Estocolmo
 estomago
-Estonia
-estonio
 estopa
 estorbar
 estorbo
@@ -4114,13 +4046,10 @@ estudioso
 estufa
 eternidad
 eterno
-etzalcualiztli
-Etzatlán
 eucalipto
 eufonía
 euro
 Europa
-europeo
 evangelio
 evangelizar
 exámen
@@ -4188,7 +4117,7 @@ falda
 falsedad
 falsedad
 falsificación
-FALSO
+falso 
 falso 
 falta
 faltante
@@ -4325,7 +4254,7 @@ forma
 forma
 formado
 formar
-fornicar con personas delismo sexo
+fornicar con personas del mismo sexo
 fornicar
 fornido
 fornido
@@ -6346,7 +6275,6 @@ nopal azul
 nopal
 Nopala
 nopalillo
-Nopaltepec
 norte
 norteño
 Noruega
@@ -9918,7 +9846,7 @@ netlamachia
 teocihui
 neyecomaxitlaztli
 maxitlaztli
-cozcatl 3
+cozcatl
 yoliliztli
 atlanemini
 yolcacualli
@@ -10034,7 +9962,7 @@ inamic
 techtia
 huelneci
 axiltilli
-axiltia 3
+axiltia
 ipoalnemoani
 ahquihuan
 nican
@@ -10900,7 +10828,7 @@ tozcachachalihui
 patla
 zalihuitl
 tlacuepaliztli
-copilli 3
+copilli
 cameyotl
 cuemitl
 tapechtli
@@ -10936,7 +10864,7 @@ piolli
 coztototl
 tzoniztalli
 chiquihuitl
-colotli 3
+colotli
 acachiquihuitl
 acatanatli
 teotlachtli
@@ -11745,7 +11673,7 @@ tlahuelalilia
 amatlacuiloloyan
 amatlacuiliztli
 paina
-toca 3
+toca
 chololli
 cuicatlayehualtilli
 peyahuac
@@ -11912,7 +11840,6 @@ netlacuitlahuini
 tlacuitlahuia
 cuitlacochin
 tlaquequetzatl
-Colhuacan
 tlamehua
 mimiahuacaxitl
 ohuayotl
@@ -11952,12 +11879,10 @@ ichpochcihuatl
 cihuatlacatzintli
 mizxihuitl
 ichpocaconetl
-daniatl
-daniatecatl
 mitotiyotl
 itotiliztli
 mitotiqui
-itotia
+ihtotia
 macehua
 itlacolli
 itlacoa
@@ -11968,7 +11893,6 @@ tlacaquitia
 ixcuitia
 nanamiqui
 tlahtolcaquilia
-cualti
 camayocahui
 atlitia
 ixnextia
@@ -12034,7 +11958,7 @@ mapiltontli
 hueymapilli
 tlapilchihualiztli
 cotoctic
-pia 3
+pia
 temanahuilli
 tenahuatiliztli
 tepantlahto
@@ -12070,7 +11994,6 @@ teyohuaztli
 teyohuazqui
 tecelotl
 tzitzimitl
-tzitzimimeh
 ixtlatiliztli
 ixtlalia
 tlanticitl
@@ -12087,7 +12010,7 @@ anetlacualtiliztli
 anetlacualtililli
 tlacoyaliztli
 amonotzalani
-yec
+yectli
 nahuatilmatiliztli
 mimatqui
 melahuac
@@ -12230,7 +12153,7 @@ cacayacac
 cacayaca
 pachihuitl
 xipetza
-petlahua 3
+petlahua
 tlapetlahualiztli
 xipetzoc
 atetlacamatiliztli
@@ -12425,23 +12348,15 @@ iciuhcayotl
 yelli
 apachiohualiztli
 tlatamachilli
-Dania
 tomin
 hueycuetzpalin
-itzcoliuhqui
-tonatiuhteotl
-ehecateotl
-apochcayaoteotl
 iztlacateotl
 teoconetl
-teoyocoyani
 teotl
-tzitzimiteotl
 teteotl
 tetzauhteotl
 huehueteotl
 cihuateotl
-calpolteteo
 teteo
 tecuhtlahtoliztli
 tecuhtlahto
@@ -12537,16 +12452,7 @@ nacacocoya
 ixcocoya
 xomococoya
 yolocuacuallotl
-tzoncuacuallotl
-ixconechcuallotl
-cuitlaxpantlazaliztli
 tlancuachcuallotl
-nacacocoyaliztli
-ixcocoyaliztli
-metzcocoyaliztli
-xomococyaliztli
-nechcocoyaliztli
-chicihuinaquiliztli
 necocoliztli
 tetzauhmaliztli
 chichinactic
@@ -12559,18 +12465,11 @@ tecpani
 tecpania
 tepani
 Dominica
-domingo
-paxcuatlateoilhuitl
-teoilhuitl
-dominitecatl
-Domingo teopixqui
 axcayotl
 tlapoapatoliztli
-teaxcatilli
-tlaxcalcoltontli
+ton
 temactiliztli
 eztetliocolilli
-Malacatepec
 cihuapilli
 cihuapiltin
 ichpochtin
@@ -12595,9 +12494,7 @@ cochtica
 cochiyan
 omeyaotlan
 ome
-chicuatzontli
 macuiltzontli
-chicotzontli
 ocpan
 maceuhcatilli
 yocatia
@@ -12612,18 +12509,11 @@ cochipatilli
 cochipatia
 ahuaxocotl
 ometiliztli
-Dublin
 neyoltzonaliztli
 omeyoloa
 amoneltica
-mileh
-tecohtli
-huacac
-axcatiani
-tecohtin
+tecuhtli
 axcatianimeh
-necuhtic
-tzopelli
 tzopelic
 tzopelicayotl
 xallan
@@ -12641,14 +12531,10 @@ opahuac
 tequizqui
 chicahuac
 potzoniliztli
-Ehecatepec
 teca
 cuatzinehua
 chilhuia
-quiollotia
 quimitlaxilia
-matlalhuia
-icualocatl
 metztli icualocatl
 tonatiuh icualocatl
 icualotl
@@ -12656,9 +12542,6 @@ tonatiuh icualotl
 yolocemanahuayotl
 yolocemanahuatini
 tequiyotiani
-Ecuatoria
-tlahcotlalticpan
-ecuatoritecatl
 tzoncuiztiqui
 cehuehuetiliztli
 tlatetzompaliztli
@@ -12666,32 +12549,24 @@ caltia
 tlazolilli
 tlahtocatequitl
 huapahualiztli
-TICA
 cacceceyane
 cazaneliztli
 cazanelli
 ixticehuatl
-exiptotl
-Exipto
 calaquini
 centlazotl
 aitia
 yeyecolia
 neixcuitilli
 neyecoliztli
-Exotlan
 amoquinquezxihuitl
 in tlein
-tachcauh
-amoquinquezmetztli
 te
 yacatiac
 chiuhqui
 manqui
 cotzilli
 in aquin
-Cozcatlan
-Vaticanopan
 yehuatl
 in
 mana
@@ -12706,7 +12581,6 @@ acuanhuaztli
 tepantlacoc
 catona
 anehuantin
-Elotan
 elotl
 meya
 tlahtolcalli
@@ -12737,7 +12611,6 @@ nahualilli
 nahualia
 nahualiztli
 tlanacazalli
-TCA (Tlahtocatotl Cepanca ihuicpa Arabia)
 ollinyotl
 nehuiquehualli
 nehuiquehua
@@ -12850,7 +12723,7 @@ neixiptlatiliztli
 tenamiqui
 namiqui
 nextia
-namiqui 3
+namiqui
 tlanololli
 noloa
 onepanco
@@ -12978,7 +12851,7 @@ apichauhqui
 cehuiloc
 miquitlatzontequi
 yeccaqui
-caqui 3
+caqui
 mopohuallo
 cenquizca
 ixquichtli
@@ -13020,7 +12893,6 @@ amahuatiliztli
 tecuia
 quemiloa
 epazotl
-Epazoyocan
 mimiquiliztli
 amatlacuilollanetiliztli
 tlahuacapatlan
@@ -13032,8 +12904,6 @@ xiuhmolpiloyan
 tlahuiltecoyan
 occe nechca
 icatoc
-Eritlia
-eritlinecatl
 huitztochtli
 tecaltontli
 teopantli
@@ -13126,10 +12996,6 @@ yolchicahualiztli
 atic
 tepozmacuauhtiliztli
 tepozchicolli
-eslovaquitecatl
-Eslovaquia
-Eslovenia
-esloveniatl
 chalchihuitl
 quetzaliztli
 teuhxalli
@@ -13150,7 +13016,6 @@ tlamamahuiliztli
 tlamamauhtini
 tlamamauhtli
 Hispania
-hispantlacatl
 hispaniliztli
 tlamotlalli
 tlamotla
@@ -13220,8 +13085,6 @@ tepozcalmimilolcoyan
 malacatlayocan
 momotlalcalli
 tlamacehualoyan
-Tepehuacan
-Tlahtocayotl In Cepamca ihuic America
 achichipictli
 caxihui
 xittontlanilli
@@ -13252,10 +13115,7 @@ amaitl
 yolocaquiloni
 tlaquitqui
 yauhtlahtoliztli
-Estocolmo
 totlatlacuayan
-Estonia
-estoniatl
 ichcazolli
 tetzicoa
 tlatetzicoliztli
@@ -13284,13 +13144,10 @@ ixtlamatqui
 tleamanalli
 cemancayotl
 cemancacyeni
-etzalcualiztli
-Etzatlan
 ocalotl
 nahuatl
 euro
 Eutlocpan
-eutlocpatl
 teomachtiliztli
 teomachtia
 yeyecoliztli
@@ -13358,7 +13215,7 @@ cueitl
 teixcuepayotl
 iztlacayotl
 teixcuepaliztli
-teixcuepalli
+ahnelli
 chahuac
 polihui
 acanoyehui
@@ -14200,7 +14057,7 @@ anequi
 amomotoquilizmac
 yolcatzin
 atleinaccac
-tlahuiztli 3
+tlahuiztli
 ahcochiliztli
 aocuelli
 teyollotiliztli
@@ -14737,7 +14594,7 @@ tlecomoctli
 notzalo
 tetocayotilli
 tetocayotiliztli
-tema 3
+tema
 notza
 tlemiahuatl
 motoca
@@ -14753,7 +14610,7 @@ tecpayo
 tenqui
 tlahuicalli
 huicalo
-huica 3
+huica
 mama
 aquia
 choquilitzatzi
@@ -15499,7 +15356,7 @@ amo quichihuilia
 amo micmana
 atletia
 a-
-amo
+ahmo
 tlahtoque
 pipiltin
 pipil
@@ -15516,7 +15373,6 @@ cacanopalli
 nopalli
 Nopallan
 xoalacatl
-Nopaltepec
 ayamictlan
 ayamictlani
 Norvegia
@@ -15800,7 +15656,7 @@ panquetzaliztli
 cihuamaxtli
 tlapaloni
 ehuacaltzatl
-yehuatl 3
+yehuatl
 tequicaltzatl
 caltzontli
 itocaltzatl
@@ -16247,8 +16103,8 @@ oxitl
 hueyxocotl
 pontzin
 tilmahtli
-mana 3
-tlalia 3
+mana
+tlalia
 tlepantlalia
 ohuitilia
 atetlaza
@@ -17165,7 +17021,7 @@ tzontequi
 nematiztli
 techcatl
 acallayayaliztli
-mati 3
+mati
 mohuelmati
 mapilhuiliztli
 machiyotl
@@ -17343,7 +17199,7 @@ ixchichilca
 ixchichilihui
 quequelolli
 quequeloa
-topilli 3
+topilli
 temiqui
 cochitta
 cochmiqui
@@ -17367,7 +17223,7 @@ nacaztzatzatl
 nacazatzatl
 xochitlaulli
 motzatzaztli
-cehuia 3
+cehuia
 tlamanticaniliztli
 chicoyotl
 chicoyoloa
@@ -17484,7 +17340,7 @@ azo zan
 yuhqui
 tlacuauhuitequiliztli
 ehuapitzcalli
-tlamamalli 3
+tlamamalli
 tlamamalia
 amamalocotl
 cuauhuitequi
@@ -17667,7 +17523,7 @@ tenochcatl
 Tenochtitlan
 teyeyecoyotl
 teyeyecoani
-yeyecoa 3
+yeyecoa
 tlapaliztli
 Teotepec
 Teotihuacan
@@ -18009,7 +17865,7 @@ tolipan
 Toltepec
 Toltitlan
 tlahquilli
-tlaza 3
+tlaza
 caxtilcuicatl
 nochtli
 azcanochtli
@@ -18292,7 +18148,7 @@ nezotlaliztli
 ameh-
 tetenehualiztli
 netolia
-tenehua 3
+tenehua
 netolli
 niauh
 tozquitl
