--- a/index.html
+++ b/index.html
@@ -222,7 +222,6 @@ acompañado
 acompañamiento
 acompañante
 acompañar
-acompañar
 acongojado
 acongojar
 aconsejado
@@ -1001,7 +1000,6 @@ artesanal
 artesano
 artesano
 articulación de los dedos
-articulo
 artículo
 artificial
 artilleria
@@ -1428,7 +1426,6 @@ bisexualidad
 bisnieta
 bisnieto
 bisonte
-bisturí
 bizcoso
 biznaga
 blanco
@@ -1610,7 +1607,6 @@ cabello de maíz
 cabellos
 caber
 cabestro
-cabeza
 cabeza
 cabo
 cabra
@@ -2369,6 +2365,9 @@ comunicar
 comunidad
 comunión
 comversación larga
+con
+con
+con
 con él
 con ellos
 con gusto
@@ -2377,7 +2376,6 @@ con permiso
 con su permiso
 con uno
 con ustedes
-con
 cóncavo
 conceder
 concedido
@@ -3253,7 +3251,6 @@ dimensión
 dinero
 dinosaurio
 diosalso
-dios hijo 
 Dios
 dios petrificado
 dios terrible
@@ -3461,6 +3458,7 @@ ejecutar
 ejemplificar
 ejemplo de vida
 ejercicio
+ejercitar
 el año anterior
 el cual
 el otro
@@ -4995,64 +4993,17 @@ invernal
 invierno
 invitado
 invitar
-ir a alguna parte 
-ir a otro lado del agua
-ir a saludar
-ir de pie
-ir de prisa
-ir despacio
-ir y venir
+ir
 iracundo
-Irak
-Irán
-iraní
-iraquí
-Irlanda
-irlandés
 irresistible
 isla
 isla
-Isla Salomón
-islam
-islámico
-islandés
-Islandia
-Islas Baleares
-Islas Canarias
-Islas Fiji
-Islas Marshall
-Israel
-israelí
-itacate
-Italia
-italiano
-italiano 
-#¿NOMBRE?
-Itzcoatl
-Itzmiquilpan
-ixcateco
-Ixcatlán
-Ixtapa
-Ixtapaluca
-Ixtenco
-Ixtlán
-ixtle
-Ixtliton
-Ixtocihuatl
-Izalco
-izcalli
-izote
 izquierda
-Iztacalco
-Iztacihuatl
-Iztapalapa
-Iztapapalocihuatl
 jabalí
 jabalí
 jabalina
 jabón
 jabonera 
-Jacala
 jactado
 jactarse
 jade
@@ -5063,21 +5014,7 @@ jalado
 jalapa
 Jalapa
 jalar
-Jalatlaco
-jalisciense
-Jalisco
-Jalostotítlan
-Jaloxtoc
-Jalpan
-Jaltenco
-Jaltocan
-Jaltomate
-jaltomate
-Jamaica
-jamaiquino
 jamón
-Japón
-japonés
 jarabe
 jardín botánico
 jardín de casa
@@ -5094,18 +5031,11 @@ jaulaetálica
 jazmín
 jazmín
 jefe
-jefe
 jeringa
-Jerusalén
-jesuita
-Jesús de Nazareth
 jícama
 jicara
-jícarausical
+jícara musical
 jilguero
-jilote
-Jilotepec
-jinete de venados
 jinete
 jiote
 jiotoso
@@ -5170,9 +5100,7 @@ junípero
 junta
 juntar
 junto
-junto a
 juntos
-Júpiter
 juramento
 jurar
 jurídico
@@ -5184,7 +5112,6 @@ juzgado
 la mayoría
 La Paz
 la primera luz
-La Venta
 laberinto
 labio
 labio leporino
@@ -5213,9 +5140,7 @@ lagañoso
 lagartija acuática
 lagartija
 lagarto
-lagarto
 lago
-Lagos
 lagrima
 lagrimal
 laguna
@@ -5229,8 +5154,7 @@ lana de oveja
 lana
 lanceta
 lanchero 
-langosta de las cañas
-langosta dear
+langosta
 langostino
 lanza de acero
 lanza deano
@@ -5557,11 +5481,7 @@ lucido
 luciérnaga
 luciérnaga
 lucir
-luego 
 luego
-luego
-lugar
-lugar 
 lugar abrigador
 lugar cavernoso
 lugar de-
@@ -5817,7 +5737,6 @@ mazorca
 mazorca tierna sin desarrollarse
 meada
 meado
-mearse deiedo
 meato urinario
 mecánico
 mecer
@@ -5825,8 +5744,8 @@ mediano
 medicina de la calentura
 medicina
 medicina
-medicolebotomíano
 medico
+medico tradicional
 medida
 medidor de presión
 medidor
@@ -5882,7 +5801,6 @@ Metepec
 meter
 metlapil
 metralla
-metro
 metro
 metrópoli
 metzca
@@ -6736,6 +6654,7 @@ peleado
 peleador
 pelear
 pelicano
+película
 peligro
 peligroso
 pellizco
@@ -8265,7 +8184,6 @@ tamaulipeco
 tamaulipeco 
 Tamazula
 Tamazulapan
-también
 también 
 también
 tambor
@@ -8457,7 +8375,6 @@ terapia
 tercero
 terciopelo 
 terminal de autobuses
-terminar
 terminar
 termino
 termino
@@ -8881,6 +8798,7 @@ vecindad
 vecino
 vecino 
 vega
+vegetariano
 veinte
 vejez
 vejiga
@@ -9010,7 +8928,6 @@ viña
 violín
 violinista
 virgen
-Virgen Maria
 virginidad
 virrey
 virtuoso
@@ -9020,6 +8937,7 @@ visco
 visible
 visión
 visitante 
+visitar
 visor telescópico
 vista 
 vistar
@@ -9319,8 +9237,7 @@ aqui
 tlatlayeloac
 tetlayeliztli
 tlatlayeni
-tlanica
-huica
+axiltia
 tetlocolli
 tlocoltia
 tlatolnamictli
@@ -10100,7 +10017,6 @@ tlamachqui
 amantecatl
 mapiliztli
 centlamantli
-inic
 tlatoltecahuilli
 tlequiquiztli
 tequiquiliztli
@@ -10328,7 +10244,7 @@ matepoztli
 yolimochitl
 yahuitl
 xoxouhtic
-texotli
+yauhtic
 poxauhtic
 matlaltic
 xiuhtic
@@ -10526,10 +10442,9 @@ cuilonyotl
 cihuaicutontli
 icutontli
 tlacaxolotl
-itzualiztli
 ayotic
 huitznahuatl
-iztatic
+iztac
 iztacayotl
 aztapiltic
 patzic
@@ -10709,7 +10624,6 @@ tzontzontin
 yehui
 cahuayomecatl
 tzontecomatl
-mezontli
 couhyotl
 cuacuauhtezontli
 tentzontli
@@ -11467,6 +11381,9 @@ matilti
 nepentlatquicayotl
 nicnoceliztli
 ecamecatl
+ica
+ihuan
+ihtloc
 inahuac
 intloc
 ica paquiliztli
@@ -11475,7 +11392,6 @@ teixcontzinco
 teixcontzinco
 iccequin
 iccequintin
-ica
 comac
 itlani
 itlanilli
@@ -12217,7 +12133,7 @@ mixehui
 molehui
 tlamomoleuhtli
 tlamoleuhtli
-quintepan
+zatepa
 ayayanoa
 petlahuac
 petlahualoni
@@ -12351,7 +12267,6 @@ tlatamachilli
 tomin
 hueycuetzpalin
 iztlacateotl
-teoconetl
 teotl
 teteotl
 tetzauhteotl
@@ -12436,7 +12351,7 @@ cueloa
 ixnepanoa
 tlapoztectli
 matlactli huan ome
-hueytemachtiani
+tepahtiani
 temachtilli
 amatzin
 tonehua
@@ -12559,6 +12474,7 @@ aitia
 yeyecolia
 neixcuitilli
 neyecoliztli
+yehyecoa
 amoquinquezxihuitl
 in tlein
 te
@@ -14094,63 +14010,16 @@ tlaceceyan
 tlacuanotztli
 yolehua
 yahua
-apana
-tlapalotihua
-xopanihua
-iciuhtehua
-popeyoca
-cahuantimani
 yolococolcuic
-Iraquia
-Irania
-iranitecatl
-iraquitecatl
-Irllandia
-irllantecatl
 amoixnahuamiquiliztli
 tlalhuac
 anepantlalpan
-Salomonia
-mahomayotl
-mahomatlacatl
-isllantecatl
-Isllandia
-Tlalhuaque Baleariah
-Tlalhuaque Canariah
-Fixi
-Marxalia
-Ixrrallia
-Ixrralnecatl
-itacatl
-Itlalia
-itlaliatecatl
-itlaliatl
-#¿NOMBRE?
-Itzcoatl
-Itzmiquilpan
-ichcatecatl
-Ichcatlan
-Iztapan
-Iztapallocan
-Ixtenco
-Ixtlan
-ixtli
-Ixtliton
-Ixtocihuatl
-Itzalco
-izcalli
-iczotl
 opochtli
-Iztacalco
-Iztacihuatl
-Iztapalapan
-Iztapapalocihuatl
 cuapitzotl
 yametl
 neminaliztli
 amolli
 amolcaxitl
-Xacallan
 chachamauhtli
 chachamahua
 xouhquitecpatl
@@ -14161,26 +14030,12 @@ tilantoc
 tolompatl
 Xalapan
 tilana
-Xalatlahco
-xalixtecatl
-Xalixco
-Xaloztotitlan
-Xaloztoc
-Xalpan
-Xaltenco
-Xaltocan
-Xaltomac
-xaltomatl
-Xamaica
-xamaitecatl
 nacatlaoyotl
-Xaponia
-xapotl
 tlachihualnecuhpatli
 xochitlayocan
 xochicalli
 coconexochitlan
-xochitlan
+xochitla
 xochipixqui
 tochtehuilocaxitl
 xaxalohton
@@ -14191,19 +14046,12 @@ cuauhcalli
 tepozcalli
 hueylacapixochitl
 lacapixochitl
-tlanahuatiqui
 tencuhtli
 tepozchiuhpatli
-Hierosalima
-Ignacio teopixqui
-Xezutzin
 xicamatl
 xicalli
 tahuitl
 tzocuitl
-xilotl
-Xilotepec
-mazanehnenqui
 cototzyetiuhqui
 xiotl
 xiotini
@@ -14268,9 +14116,7 @@ tlaxcatl
 nechicalli
 nechicoa
 chico
-#¿NOMBRE?
 ceccan
-Tezcatlipoctli
 itechtlahtololiztli
 itechtlahtoa
 tlatzontequililli
@@ -14282,7 +14128,6 @@ tecpan
 achimochintin
 Paxia
 cipactli
-Olman
 aquizaliztlayocan
 cipetl
 tencototl
@@ -14309,11 +14154,9 @@ ichtecqui
 ichtecque
 ixcuicuitlac
 acuetzapalin
-cuexin
-cuetzpalli
-cuetzpalin
+cuetzpallin
+cuetzpallin
 atezcatl
-Lagoa (altepetl)
 ixayotl
 tixcuilchilli
 amictlan
@@ -14327,7 +14170,6 @@ tomitl
 ichcatzomitl
 tezohuani
 acalhuacaquixtini
-acapachapulin
 achacatl
 acachatl
 tepoztopilli
@@ -14655,11 +14497,7 @@ iyotilli
 copitl
 icpitl
 iyotia
-immanon
-axcampa
-zan niman
-#¿NOMBRE?
-#¿NOMBRE?
+niman
 yeccan
 oztotlan
 #¿NOMBRE?
@@ -14915,7 +14753,6 @@ cemolotl
 cacamatl
 aaxiliztli
 axixcozauhqui
-aaxixa
 axixpiaztli
 tepoztiani
 neloa
@@ -14923,7 +14760,7 @@ zantleco
 atonahuizpatli
 ticiyotl
 patli
-tezoc
+tepahtiani
 ticitl
 tlatamachiliztli
 izmachiolli
@@ -14979,9 +14816,8 @@ yeyamatini
 Metepec
 mati
 metlapilli
-tepoztlacuimitl
+tepozocuillin
 tepozmalacacaltetl
-metro
 hueyaltepetl
 metzcatl
 Metztitlan
@@ -15583,7 +15419,7 @@ teopixqui
 tetahnantli
 teoyotahtli
 tlateotocani
-patzcayotia
+patcayotia
 tzacu
 centlaixtli
 tlalpan
@@ -15693,7 +15529,7 @@ quechpozahuiliztli
 Yancuic Ginea
 topalihuiztli
 Paquimeh
-pampa
+inic
 ehecatemoani
 calmimilolcan
 amozayotl
@@ -15834,6 +15670,7 @@ tlaicalilli
 micalini
 icalia
 achalalatli
+ixiptlayolli
 ohuiliztli
 ohui
 tecotonaliztli
@@ -17363,7 +17200,6 @@ tamaholipanecatl
 tamaholipatl
 Tamazollan
 Tamazolapan
-noihuan
 noyuhqui
 noihqui
 huehuetl
@@ -17555,8 +17391,7 @@ tematzticiyotl
 yeto
 puchinchi
 calmimilolcoyan
-cahuilia
-tzonquiza
+tlami
 cenetlalolli
 tzonquizaliztli
 cauhmachiolli
@@ -17979,6 +17814,7 @@ tepanamiquiliztli
 tepehuac
 calnahuac
 tlahuelmayan
+quilitlacuani
 cempohualli
 huehueyotl
 axixtecomatl
@@ -18108,7 +17944,6 @@ xocomecamilli
 violli
 violnemini
 ocuelichpoctli
-Maria ichpochtli (Tonantzin)
 ichpochyotl
 tlahtocateixiptlac
 yectli iyollo
@@ -18118,6 +17953,7 @@ ixnecuiltic
 ittoni
 tlachcottaliztli
 tetlapaloani
+ihtatiuh
 huatequi
 tlachializtli
 tetlapaloa
