--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@ abacero
 abad
 abadesa
 abajo
+abajo
+abajo
 abalanzar
 aballestar
 abanderado
@@ -217,6 +219,7 @@ acocote
 acocote
 acomedido
 acometido
+acomodar
 acomodarse
 acompañado
 acompañamiento
@@ -620,6 +623,7 @@ altar de cráneos
 altar
 alteración
 alterar
+alto 
 alto 
 alumbramieto
 alumbrar
@@ -1804,6 +1808,7 @@ caoba
 capa de jaguar
 capa de tierra
 capa
+capa
 capar
 caparazón
 caparazón
@@ -2715,6 +2720,7 @@ cuchillo
 cuello
 cuenca
 cuenta
+cuento
 cuento fantástico
 cuerda
 cuerno
@@ -4220,7 +4226,6 @@ flechador
 flechar
 flema
 flojera 
-flojo
 flojo 
 flor de alcatraz
 flor de amapola
@@ -4647,6 +4652,8 @@ hermano
 hermano
 hermanoayor
 hermoso
+hermoso
+hermoso
 hermosura
 hermosura
 hernia
@@ -4704,11 +4711,10 @@ hoja
 hoja santa
 hola
 hola
-Holanda
-holandés
+hola
+hola
 holgazán
 hollín
-hombre asiático
 hombre casado
 hombre de casa
 hombre de paz
@@ -6151,6 +6157,7 @@ ni
 ni-
 ni
 Nicaragua
+nido
 nido de pájaro
 niebla
 nieto
@@ -6229,6 +6236,7 @@ nuez
 numeración
 número
 número
+nunca
 nunca
 nutría
 nutríaarina
@@ -6407,7 +6415,6 @@ pagar
 pagar sentencia
 página
 país
-País Vasco
 paisano
 paja
 paja para techumbre
@@ -6615,6 +6622,7 @@ pavilo
 pavilo
 pavo joven
 pavo
+pavo
 pavo real
 pavos
 payasada tontería
@@ -6775,7 +6783,6 @@ pico
 picoontañoso
 picoontañoso
 picoso
-pie
 pie
 piedad
 piedra caliza
@@ -7012,9 +7019,6 @@ prevenir
 previsión
 prima
 primavera
-primavera 
-primaveral
-primaveral
 primero
 primitivo
 primo
@@ -7468,6 +7472,7 @@ repartido
 repartidor
 repartir
 reparto
+repetir
 repicar
 repicar la campana
 repollo
@@ -7853,7 +7858,7 @@ señalamiento urbano
 señalar con el dedo
 señalar
 señor
-señor
+señorita
 separarse
 septiembre
 septimo 
@@ -9084,6 +9089,8 @@ xiuhcaloyan
 xiuhcani
 teoyotica tepachoani
 cihuateoyotica tepachoani
+ixiptla
+itzintla
 tlani
 cuitlaxeloa
 tepoztlahuitoloa
@@ -9233,6 +9240,7 @@ piatztli
 acocotli
 tlachihuac
 tlalnepanhualtiliztli
+yectia
 aqui
 tlatlayeloac
 tetlayeliztli
@@ -9636,6 +9644,7 @@ tzompantli
 momoztli
 necomoniliztli
 colonia
+itzonco
 cuauhtic
 pilhuatiyotl
 tlahuilia
@@ -10043,7 +10052,7 @@ itomiquiztli
 iyomicqui
 iyomiqui
 popocmiqui
-ihquin
+ihco
 in yuh
 ihquinyezqui
 ihqui
@@ -10214,7 +10223,7 @@ acoatototl
 Axayacatl
 ciyacatl
 Mapachtlan
-yolhua
+yalhua
 ayocotli
 tlapalehuiani
 icnelia
@@ -10819,6 +10828,7 @@ cahuatl
 tzopilocuahuitl
 ocelotentlapalli
 tlalnepantli
+nahuatl
 tilmatli
 atequixtia
 callotl
@@ -11731,6 +11741,7 @@ tlaxotlahuiqui
 quechtli
 tlaxomolli
 pohualli
+zahzanilli
 tlahtolpapalotl
 mecatl
 cuacuahuitl
@@ -11838,7 +11849,7 @@ oc yohuatzinco
 ihuicpa Mexico 
 zan ahuel
 yohualtica
-ayancuipan
+ocuel
 nepantlapallo
 cepan
 in quenin
@@ -13236,8 +13247,7 @@ tlaminqui
 huitolohua
 alachin
 achicahualiztli
-achicahuaqui
-tlatzahqui
+tlazinqui
 canauhxochitl
 amapoxochitl
 chimalxochitl
@@ -13433,7 +13443,7 @@ xochitlacualiztli
 xochitlacuani
 xoxoliztli
 xoxotoc
-pachilia
+huitequi
 chapalia
 tzotzona
 tetlaixpolhuilli
@@ -13663,6 +13673,8 @@ teicauhtli
 icnitl
 tiachcauhtli
 quetzalli
+yeyectzin
+cuacualtzin
 quetzalxiliztli
 quetzalcayotl
 xoxalli
@@ -13718,13 +13730,12 @@ amatlapalli
 chichixihuitl
 izuatl
 tlamapaquilitl
-hao
+panolti
+tzino
+pialli
 niltze
-Hollandia
-hollantecatl
 tlatziuhqui
 cuichtli
-axiatlacatl
 cihuahuac
 notlacamatini
 yocoxcatlacatl
@@ -15167,6 +15178,7 @@ nian
 ni-
 n
 Nicanahuac
+chantli
 tapazolli
 ayahuitl
 ixhuihtli
@@ -15246,6 +15258,7 @@ tlapohualiztli
 tlapoalli
 tlapohualli
 aic
+ahmo quemah
 acoyotl
 aitzcuintli
 cuayolopilyotl
@@ -15423,7 +15436,6 @@ patcayotia
 tzacu
 centlaixtli
 tlalpan
-Vaxcapan
 altepetlacac
 zacatl
 zacacueitl
@@ -15630,9 +15642,10 @@ patzohua
 ocoicpayotl
 ocoicpayolotl
 alatl
-hueixolotl
+totolli
+huexolotl
 quetzaltotolin
-hueixolomeh
+huexolomeh
 xolopiyotl
 tlamatcayeliztli
 yocoxcayotl
@@ -15791,8 +15804,7 @@ cuauhtlatzacualli
 tlacpac
 yacac
 cococ
-xotl
-xomachiotl
+ixitl
 icnoacayotl
 tenextetl
 cacalotetl
@@ -16027,10 +16039,7 @@ mocihuiani
 xonexca
 tlachtopaittaliztli
 cihuaixoyuhtli
-xopanitztempan
-xopaniztli
-xopanitztempacayotl
-cueponcayotl
+xopan
 inic ce
 achtotlacatl
 yezini
@@ -16193,7 +16202,7 @@ tlatlac
 cahuani
 chichinolli
 tlatlatiliztli
-tletia
+tlatla
 chichinoa
 nequi
 monequiltia
@@ -16484,6 +16493,7 @@ tlatlachicohuilli
 tetlaxexelhuiani
 tlachicohuia
 tetlaxexelhuiliztli
+cuepa
 tzitzilitza
 tzilinia
 axoiztaquilitl
@@ -16724,7 +16734,7 @@ chilmamolli
 chilcaxitl
 apancholoani
 chapolli
-apancholoa
+tzicuini
 huehcacholoa
 apancholoaniliztli
 pacayeliztli
@@ -16868,8 +16878,8 @@ pololiznetzayotilli
 tepozmachiotl
 mapilhuia
 ititi
-tlatihuani
-tecuhtli
+tlacatzintli
+ixpocatl
 moxexeloa
 sectiembri
 inic chicome
@@ -17865,9 +17875,9 @@ Totonicapan
 totonicatecatl
 cuauhchinamitl
 xupantlacayotl
-xupantlan
+tonalco
 tepechin
-ixcahuilli
+tlachihualiztli
 neltiliztli
 xoxoctli
 quiltic
@@ -17960,7 +17970,7 @@ tetlapaloa
 tlapaltehuilotl
 cuauhtehuilocalli
 oquichmicqui
-cihuamicqui
+icnotlacatl
 nencayotl
 nehuemini
 pixtinemi
